tests/compile_fail/failure_to_infer_store_type.stderr
error[E0283]: type annotations needed
 --> tests/compile_fail/failure_to_infer_store_type.rs:3:1
  |
3 | #[memoized(key_expr = (), store_init = Default::default())]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type of the type parameter `T` declared on the struct `Box`
  |
  = note: cannot satisfy `_: Default`
  = note: this error originates in the attribute macro `memoized` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider specifying the generic argument
  |
3 | #[memoized(key_expr = (), store_init = Default::default())]::<T>
  |                                                            +++++

error[E0283]: type annotations needed
 --> tests/compile_fail/failure_to_infer_store_type.rs:3:1
  |
3 | #[memoized(key_expr = (), store_init = Default::default())]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type of the type parameter `T` declared on the struct `Box`
  |
  = note: multiple `impl`s satisfying `_: MemoizationStore<(), ()>` found in the `michie` crate:
          - impl<I, R> MemoizationStore<I, R> for BTreeMap<I, R>
            where I: Ord, R: Clone;
          - impl<I, R> MemoizationStore<I, R> for HashMap<I, R>
            where I: std::cmp::Eq, I: Hash, R: Clone;
note: required by a bound in `inference_hint`
 --> tests/compile_fail/failure_to_infer_store_type.rs:3:1
  |
3 | #[memoized(key_expr = (), store_init = Default::default())]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `inference_hint`
  = note: this error originates in the attribute macro `memoized` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider specifying the generic argument
  |
3 | #[memoized(key_expr = (), store_init = Default::default())]::<T>
  |                                                            +++++
